
Besure to also join the discord: https://discord.gg/wv6huJAwEv

NOTE: Make sure you refresh the page! Sometimes you will not get the lastest update!

+ Means something was added
^ Means something was upgraded or changed
- Means something was removed
------------------------------------------------------------
Nov, 16
+ Added Crossy Road
+ Added Friday Night Funkin
+ Added Vex 7
+ Added Contact page
^ Fixed Bad Ice Cream 1, 2, and 3
^ Added more reviews
^ Fix mobile redirects for 1v1.lol
------------------------------------------------------------
Nov, 14
^ Added more reviews
------------------------------------------------------------
Nov, 13
+ Added Bad Ice Cream
+ Added Bad Ice Cream 2
+ Added Bad Ice Cream 3
+ Added Generic Fishing Game
+ Added Synesthesia
^ Updated changlog for a mistake
^ Updated Cookie Clicker to v2.048
------------------------------------------------------------
Nov, 12
Thank you so much to Alex for getting 1v1.lol to work!
+ Added 1v1.lol
+ Added Froggy's Battle
+ Added Evolution
+ Added Pop Cat classic
^ Update site statistics
^ Added more reviews
- Disable setting for new game notifications due to issues
------------------------------------------------------------
Nov, 11
^ Changed how webretro loads roms
+ Also added plenty more roms
------------------------------------------------------------
Nov, 10
^ Added more reviews
------------------------------------------------------------
Nov, 8
Submit your sounds for the soundboard here: https://forms.gle/1KHtjREBvbf1VCGG9
^ Added more sounds to the soundboard
^ Upgrade control menu on soundboard
^ Fixed bug with sound buttons being wonky with the controller
------------------------------------------------------------
Nov, 7
^ Added more splash texts
^ Added more reviews
------------------------------------------------------------
Nov, 5
LAX1DUDE has announced that he is going to stop development on eaglercraft, sadge
+ Added Happy Hop
^ Updated Eaglercraft for the last time