@@ -1,4 +1,4 @@
-/* CSS for /dump/contact */
+/* CSS for /dump/verify */
 body {
   font-family: sans-serif;
   font-size: "25px";
