@@ -1,0 +1,30 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Verification | 3kh0</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link href="/css/verify.css" rel="stylesheet" />
+  </head>
+  <script src="/js/main.js"></script>
+  <body>
+    <h1>How to verify it is the real 3kh0</h1>
+    <p>Recently, there has been an outbreak of people impersonating me all over schools. So I want to give a few methods for you to verify if I am the real 3kh0 that I say that I am. This is also so you can prove to these imposters that they are fakers. I highly encourage that do you these steps if you know (or think) that you know me.</p>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5756835229788588" crossorigin="anonymous"></script>
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5756835229788588" data-ad-slot="6230603875" data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    <p>
+      1. I live in North Carolina currently, I have never moved in or out of North Carolina at any time of my life. If I ever do, I will update this. Any excuse you get is fake.<br>
+      2. I am the account holder of https://github.com/3kh0. If you want me to prove it, I will create a txt file in the 3kh0/3kh0 repo with your name, and any other information to confirm that I have write access. The only person with write access to this repo is me and me only. Any excuse is fake and should not be trusted.<br>
+      3. Another way to prove that I am real is through my email. Tell me a word or phrase in-person, and tell me to email you the word from my email at echo-the-coder@tuta.io It will always work, any excuse is fake.<br>
+      4. You can also verify me on discord, my Discord is 3kh0_#1791 with the id of 634120882301698099. My direct messages are always open. My account was created on Oct 16, 2019. If any of this information does not match up, the account is fake. Please message me with the information above so I can bully this imposter.<br>
+    </p>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5756835229788588" crossorigin="anonymous"></script>
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5756835229788588" data-ad-slot="6230603875" data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    <p>You should make sure that you do at least 3 of these steps to fully verify that this is me, and if you have any suspicion that this person might be fake, redo these steps, I will not refuse, if you get any pushback, this could mean that this person is fake. If you have any other questions, or if you suspect you have meet me in real life and would like to verify this, please email me at echo-the-coder@tuta.io I will try my best to confirm if this person you meet was me or some other imposter. If they are a imposter, I kindly ask you to humiliate them. :)</p>
+    <p>Stay safe out there!</p>
+  </body>
+</html>
