@@ -39,6 +39,7 @@
       Welcome to 3kh0.github.io, your best option for unblocked games on the internet.<br />
       <br />
       <!-- Place any annoucements here -->
+      <p><a href="dump/verify.html">How to verify that you are dealing with the REAL 3kh0</a> It is a shame that this is needed.</p>
       <br />
       <br />
       <br />
