@@ -26,6 +26,7 @@
     <meta name="viewport" content="width=900, initial-scale=1" />
     <link rel="shortcut icon" href="img/favicon.ico" />
     <script src="base64.js"></script>
+    <script src="/js/main.js"></script>
 
     <script>
       var VERSION = 2.048;
